external-crates/move/crates/move-compiler-transactional-tests/tests/control_flow/signed_int_conditionals.snap
---
source: crates/move-transactional-test-runner/src/framework.rs
---
processed 11 tasks

task 7, lines 100-116:
//# run
Error: error[E04024]: invalid usage of immutable variable
    ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpGGKZrf:108:20
    │
107 │     let count: u64 = 0;
    │         ----- To use the variable mutably, it must be declared 'mut', e.g. 'mut count'
108 │     if (a < 0i8) { count = count + 1; };
    │                    ^^^^^ Invalid assignment of immutable variable 'count'

error[E04024]: invalid usage of immutable variable
    ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpGGKZrf:109:21
    │
107 │     let count: u64 = 0;
    │         ----- To use the variable mutably, it must be declared 'mut', e.g. 'mut count'
108 │     if (a < 0i8) { count = count + 1; };
109 │     if (b < 0i16) { count = count + 1; };
    │                     ^^^^^ Invalid assignment of immutable variable 'count'

error[E04024]: invalid usage of immutable variable
    ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpGGKZrf:110:21
    │
107 │     let count: u64 = 0;
    │         ----- To use the variable mutably, it must be declared 'mut', e.g. 'mut count'
    ·
110 │     if (c < 0i32) { count = count + 1; };
    │                     ^^^^^ Invalid assignment of immutable variable 'count'

error[E04024]: invalid usage of immutable variable
    ┌─ /var/folders/wq/yn9hqn9s71s8ktjc6z89b8wr0000gn/T/.tmpGGKZrf:111:21
    │
107 │     let count: u64 = 0;
    │         ----- To use the variable mutably, it must be declared 'mut', e.g. 'mut count'
    ·
111 │     if (d < 0i64) { count = count + 1; };
    │                     ^^^^^ Invalid assignment of immutable variable 'count'
